# pondr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: .gitkeep  sample_conversations.jsonl
data/pod_runs/: dialogsum_50_ingestion_report.json
docs/: Code_Ontology.md  Hippocampal Memory Architecture for AI v2.txt  JST-architecture-proposal.md  JST-implementation-plan.md  Phase 1a.md  Phase 1b.md  Phase 1c.md  Phase 1d.md  Phase 2a.md  Phase 2b.md  Phase 2c.md  Phase 3a Task 3 - sharded labeling design.md  Phase 3a.md  Phase 3b.md  Phase 3c.md  Phase 4.md  Ponder Engine Chat Facts.md  Ponder Engine Phases.md  STRM-architecture-proposal.md  STRM-implementation-plan.md  The Ponder Engine v2.txt  The _Ponder_Engine_Coding_Chat.json  Wavedb_as_vector_db.json  bonsai-independence-plan.md  capability-assessment.md  consolidation-pipeline.md  doc-kind-head-architectural-learnings.md  jgs-the-new-primitive.md  phase-1c-3c-followups.md  phase-2-retrieval-parsers-plan.md  strm-readout-lessons-learned.md  strm-transformer-relocator-plan.md  training-guide.md  wavedb-384-scale-results.md  wavedb-vector-layer-integration-plan.md
docs/adr/: 006-working-memory-design.md  007-ssm-chunking-strategy.md  008-gnn-consolidation-design.md  009-semantic-memory-storage.md  010-store-backed-gnn-training-pod-path.md
infra/runpod/: README.md
models/: manifest.md
notebooks/: .gitkeep  extraction_quality.ipynb  retrieval_quality.ipynb
scripts/: .gitkeep  _pod_scale_run.sh  _probe_amplification.py  _probe_chunk_sensitivity.py  _probe_extraction.py  _probe_flush_count.py  _probe_graph_query.py  _probe_prefix_position.py  _probe_prefix_sharing.py  _probe_reclaim.py  _probe_scan_compat.py  assemble_gnn_checkpoint.py  assess_capability.py  build_doc_corpus_store.py  build_vector_index.py  compact_corpus_db.py  compute_entity_salience.py  compute_salience_thresholds.py  diag_reopen.py  diag_reopen_integrity.py  diag_reopen_steps.py  diagnose_residual_loss.py  download_corpora.py  eval_strm_context_coverage.py  eval_strm_cost_parity.py  eval_strm_ship_decision.py  eval_strm_threshold_sweep.py  extract_backbone_sequences.py  fetch_onyx_sessions.py  finetune_backbone_flatlast_margin.py  generate_bonsai_training_data.py  generate_code_aware_data.py  generate_contradiction_training_data.py  generate_doc_kind_synthetic.py  generate_gate_training_data.py  generate_gnn_training_data.py  generate_graduation_labels.py  generate_jepa_training_data.py  generate_lmsys_serve_traces.py  generate_onyx_doc_ring_traces.py  (+43 more)
src/: __init__.py  config.py  orchestrator.py  runtime.py  tools.py
src/encoding/: __init__.py  assertion_extractor.py  bonsai_relations.py  distill_worker.py  encoder.py  gliner_extractor.py
src/generation/: __init__.py  mode_a.py
src/gnn/: __init__.py  anomaly_injector.py  anomaly_rules.py  bonsai_decider.py  consolidate.py  features.py  graph_loader.py  heads.py  label_tensors.py  model.py  semantic_memory.py  sharded_labeling.py  taxonomy_graph.py  train.py
src/ingestion/: __init__.py  chunker.py  code_parser.py  code_summarizer.py  doc_kind.py  docx_parser.py  email_parser.py  parsers.py  pdf_parser.py  pipeline.py  web_parser.py
src/memory/: __init__.py  blob_store.py  document.py  edge_meta.py  episode.py  forgetting.py  ontology.py  store.py
src/retrieval/: __init__.py  chunked_context.py  document_retriever.py  end_state.py  expand_handler.py  graph_traversal.py  prompt_compress.py  query_planner.py  retriever.py  vector_search.py  wavedb_vector_store.py
src/subconscious/: __init__.py  backbone.py  configs.py  context_builder.py  cross_slot_transformer.py  doc_kind_head.py  gate.py  graduation_head.py  instance.py  latent_dynamics_head.py  lora.py  pin_tag.py  presentation_gate.py  recoverability_head.py  relevance_head.py  relevance_score.py  retrieval_gate.py  routing.py  salience.py  ssm.py  ssm_chunker.py  state_readout.py  state_serializer.py  working_memory.py  z_relevance_head.py
src/subconscious/training/: __init__.py  context_builder_training.py  doc_kind_training.py  gate_training.py  graduation_training.py  jepa_loss.py  latent_dynamics_training.py  pretrain.py  recoverability_training.py  relevance_training.py  replay_buffer.py  routing_training.py  strm_traces.py
src/training/: __init__.py  generator_common.py  oracle_labeling.py  prompts.py  validators.py
tests/: conftest.py  test_anomaly_injector.py  test_anomaly_reconsolidation.py  test_anomaly_rules.py  test_assertion_extraction.py  test_bonsai_decider.py  test_bonsai_decider_live.py  test_bonsai_relations.py  test_chunked_context.py  test_citation_resolution.py  test_code_parser.py  test_code_summarizer.py  test_consolidate.py  test_consolidate_bonsai.py  test_consolidate_forgetting.py  test_context_builder.py  test_contradiction.py  test_deep_archive.py  test_defaults.py  test_distill_worker.py  test_doc_kind_head.py  test_doc_retrieval.py  test_document.py  test_document_retriever.py  test_docx_parser.py  test_edge_forgetting_filter.py  test_edge_meta.py  test_email_parser.py  test_encoder.py  test_encoder_stub_fill.py  test_end_state.py  test_end_state_dispatch.py  test_end_to_end.py  test_enterpriserag_eval.py  test_entity_salience_compose.py  test_episode.py  test_episode_forgetting.py  test_eval_strm_context_coverage.py  test_expand_handler.py  test_extraction_quality.py  (+71 more)
(+3 files in other folders)
