[project]
name = "hippocampal-memory"
version = "0.1.0"
description = "Brain-inspired hippocampal memory architecture for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hippo project" }]
dependencies = [
    # Storage: WaveDB (Graph layer = hippocampal index, HBTrie = neocortical store).
    # Windows installs use the prebuilt-DLL wheel; Linux builds libwavedb from C
    # source via CMake (needs a C compiler at install time).
    "wavedb>=0.2.2",  # >=0.2.2: sync_only scan fix (delete+re-put keys stay visible
                      # to range scans) + explicit vector_layer_migrate + persisted
                      # __format type. 0.2.1 on PyPI is the PRE-scan-fix build; do
                      # not use it. GraphLayer.expand_triple (atomic content+graph
                      # batch) arrived at 0.1.4.
    # GLiNER2 — stable extraction against the evolved schema (Fastino, CPU).
    # [local] pulls torch + transformers for local inference.
    "gliner2[local]>=1.3.0",
    # GLiNER (Knowledgator fork) — GLiNER-Decoder for open entity discovery.
    "gliner>=0.2.0",
    # Bonsai — local 8B ternary relation model is served on the RunPod pod by the
    # Prism fork of llama.cpp's `llama-server` (OpenAI-compatible HTTP). The
    # Python side calls that endpoint over HTTP, so no llama-cpp-python build is
    # needed here. See infra/runpod for the serving image.
    "httpx>=0.27",
    # Structured config + data.
    "pydantic>=2.0",
    "numpy",
    "python-dotenv",
    # Phase 3a: GNN Consolidator. torch_geometric is the graph-ML layer on top
    # of torch (which arrives transitively via gliner2[local]). Pure-Python ops
    # path works on CPU — no torch_sparse/torch_scatter C++ build required for
    # the loader or the GAT/heads. ogb (OGB benchmarks for GAT pretraining) is
    # GPU/pod-only and lives in the [gnn] extra so it isn't forced on the dev
    # machine. The GNN does NOT depend on the SSM/mamba_ssm stack.
    "torch_geometric>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "black",
    "ruff",
]
# GAT pretraining on OGB benchmarks (Phase 3a Task 4, pod/GPU only). Pulls the
# ogb package + its dataset downloader; not needed for the graph loader, model,
# consolidation loop, or any offline test.
gnn = [
    "ogb",
]
# Document-ingestion parser deps (the RAG-replacement pillar). Each parser
# lazy-imports its dep inside ``parse`` and raises a clear RuntimeError on a
# missing dep, so the offline test suite stays green without this extra
# (``importorskip`` skips the dep-specific tests). ``pip install -e
# .[ingestion]`` opts into all of them.
ingestion = [
    "pypdf>=4.0",
    "tree-sitter",
    "tree-sitter-languages",
    "python-docx",
    "beautifulsoup4",
    "lxml",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# The doc's layout uses a top-level `src` package with `memory`/`encoding`
# subpackages and `from src.memory.store import ...` style imports. Declare ALL
# src.* subpackages that ship on disk so editable installs + wheels include
# them (pre-existing bug: only src/src.memory/src.encoding were declared, so
# src.ingestion/src.retrieval/src.subconscious/src.gnn/src.training were
# silently dropped from built distributions).
packages = [
    "src", "src.memory", "src.encoding", "src.ingestion", "src.retrieval",
    "src.subconscious", "src.gnn", "src.training",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"